c/examples/writing-a-c-compiler-tests/tests/chapter_5/valid/extra_credit/compound_assignment_use_result.c
int main(void) {
    int x = 1;
    int y = x += 3;
    return (x == 4 && y == 4);
}