c/examples/writing-a-c-compiler-tests/tests/chapter_5/invalid_parse/declare_keyword_as_var.c
int main(void) {
    int return = 4;
    return return + 1;
}